--- a/curry.html
+++ b/curry.html
@@ -19,14 +19,14 @@
     </div>
 
     <div>
-        <p><img src="../images/curry.jpg" alt="カレー" class="example"></p>
+        <p><img src="curry.jpg" alt="カレー" class="example"></p>
     </div>
 
 
     <table border="1" cellspacing="0" cellpadding="0">
         <caption class="zairyou">材料一覧</caption>
         <tr>
-            <td colspan="2"><img src="../images/forkknife.png" alt="カレー">４人前</td>
+            <td colspan="2"><img src="forkknife.png" alt="カレー">４人前</td>
         </tr>
 
         <tr>
@@ -83,7 +83,7 @@
 
     <h2>ワンポイント</h2>
     <div class="onepoint">
-        <p><img src="../images/chocolate.jpg" alt="チョコ"></p>
+        <p><img src="chocolate.jpg" alt="チョコ"></p>
 
         <p>コクを出すために煮込んでいる途中でお好みの量のチョコレートを加え、混ぜながらとかしましょう。
             <br>
